--- a/app/templates/book/index.html.twig
+++ b/app/templates/book/index.html.twig
@@ -6,16 +6,21 @@
 
 {% block body %}
     <h1>{{ 'title_book_list'|trans }}</h1>
-    {% if books is defined and books|length %}
+    {% if pagination is defined and pagination.items|length %}
+
+        <div class="navigation text-center">
+            {{ knp_pagination_render(pagination) }}
+        </div>
+
         <table class="table table-striped">
             <tr>
-                <th>{{ 'label_id'|trans }}</th>
-                <th>{{ 'label_created_at'|trans }}</th>
-                <th>{{ 'label_updated_at'|trans }}</th>
-                <th>{{ 'label_title'|trans }}</th>
+                <th>{{ knp_pagination_sortable(pagination, 'label_id'|trans, 'book.id') }}</th>
+                <th>{{ knp_pagination_sortable(pagination, 'label_created_at'|trans, 'book.createdAt') }}</th>
+                <th>{{ knp_pagination_sortable(pagination, 'label_updated_at'|trans, 'book.updatedAt') }}</th>
+                <th>{{ knp_pagination_sortable(pagination, 'label_title'|trans, 'book.title') }}</th>
                 <th>{{ 'label_actions'|trans }}</th>
             </tr>
-            {% for book in books %}
+            {% for book in pagination.items %}
                 <tr>
                     <td>{{ book.id }}</td>
                     <td>{{ book.createdAt|date('Y/m/d') }}</td>
@@ -27,6 +32,11 @@
                 </tr>
             {% endfor %}
         </table>
+
+        <div class="navigation text-center">
+            {{ knp_pagination_render(pagination) }}
+        </div>
+
     {% else %}
         <div class="alert alert-danger" role="alert">
             {{'empty_book_list' | trans}}
