--- a/app/templates/category/index.html.twig
+++ b/app/templates/category/index.html.twig
@@ -32,11 +32,9 @@
 
                         <a href="{{ url('category_show', {'id':category.id}) }}">{{ 'action_show'|trans }}</a>
                         <a href="{{ url('category_edit', {'id':category.id}) }}">{{ 'label_edit'|trans }}</a>
-                        {#
-                        {% if not category.tasks|length %}
+                        {% if not category.books|length %}
                             <a href="{{ url('category_delete', {'id':category.id}) }}">{{ 'label_delete'|trans }}</a>
                         {% endif %}
-                        #}
                     </td>
                 </tr>
             {% endfor %}
