--- a/app/templates/author/delete.html.twig
+++ b/app/templates/author/delete.html.twig
@@ -1,10 +1,11 @@
 {% include 'default/_form.html.twig' with {
-    page_title: 'title_author_edit',
+    page_title: 'title_author_delete',
     page_title_param: {'%title%': author.title},
     attr: {
-        method: 'PUT',
-        action: url('author_edit', {'id': author.id}),
+        method: 'DELETE',
+        action: url('author_delete', {'id': author.id}),
     },
     form: form,
+    submit_label: 'action_delete'|trans,
     back_to_list_path: 'author_index',
 } %}
