--- a/app/templates/author/index.html.twig
+++ b/app/templates/author/index.html.twig
@@ -32,11 +32,9 @@
 
                         <a href="{{ url('author_show', {'id':author.id}) }}">{{ 'action_show'|trans }}</a>
                         <a href="{{ url('author_edit', {'id':author.id}) }}">{{ 'label_edit'|trans }}</a>
-                        {#
-                        {% if not category.tasks|length %}
-                            <a href="{{ url('category_delete', {'id':category.id}) }}">{{ 'label_delete'|trans }}</a>
+                        {% if not author.books|length %}
+                            <a href="{{ url('author_delete', {'id':author.id}) }}">{{ 'label_delete'|trans }}</a>
                         {% endif %}
-                        #}
                     </td>
                 </tr>
             {% endfor %}
@@ -47,12 +45,10 @@
         </div>
 
     {% else %}
-        {#
         {% include 'default/_single_flash_message.html.twig' with {
             type: 'warning',
-            message: 'empty_category_list'|trans
+            message: 'empty_author_list'|trans
         } %}
-        #}
     {% endif %}
 
     <a href="{{ url('book_index') }}">{{'all_books_list_back'|trans}}</a>
