--- a/app/templates/book/index.html.twig
+++ b/app/templates/book/index.html.twig
@@ -6,6 +6,7 @@
 
 {% block body %}
     <h1>{{ 'title_book_list'|trans }}</h1>
+    <a href="{{ url('book_create') }}">{{'title_book_create'|trans}}</a><br><br>
 
     <h5>{{ 'see_more'|trans }}</h5>
     <ul class="dl-horizontal"> {# dl tag, a list with term and descriptions #}
