--- a/app/templates/book/show.html.twig
+++ b/app/templates/book/show.html.twig
@@ -30,7 +30,7 @@
             message: 'book_not_found'|trans
         } %}
     {% endif %}
-        <a href="{{ url('book_index') }}" title="{{ 'action_back_to_list'|trans }}">
-            {{ 'action_back_to_list'|trans }}
+        <a href="{{ url('book_index') }}">
+            {{ 'all_books_list_back'|trans }}
         </a>
 {% endblock %}
