--- a/app/templates/book/index.html.twig
+++ b/app/templates/book/index.html.twig
@@ -10,8 +10,9 @@
 
     <h5>{{ 'see_more'|trans }}</h5>
     <ul class="dl-horizontal"> {# dl tag, a list with term and descriptions #}
-        <li><a href="{{ url('category_index') }}">{{'category_list'|trans}}</a></li>
         <li><a href="{{ url('author_index') }}">{{'author_list'|trans}}</a></li>
+        <li><a href="{{ url('category_index') }}">{{'category_list'|trans}}</a></li>
+        <li><a href="{{ url('tag_index') }}">{{ 'tag_list'|trans }}</a></li>
     </ul>
 
     {% if pagination is defined and pagination.items|length %}
