--- a/app/templates/book/index.html.twig
+++ b/app/templates/book/index.html.twig
@@ -5,15 +5,27 @@
 {% endblock %}
 
 {% block body %}
+    {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+        <div>{{ app.user.username }}</div>
+        <div>
+            <a href="{{ url('app_logout') }}">{{ 'logout'|trans }}</a>
+        </div>
+    {% else %}
+        <div>
+            <a href="{{ url('app_login') }}">{{ 'log_in'|trans }}</a>
+        </div>
+    {% endif %}
     <h1>{{ 'title_book_list'|trans }}</h1>
-    <a href="{{ url('book_create') }}">{{'title_book_create'|trans}}</a><br><br>
 
-    <h5>{{ 'see_more'|trans }}</h5>
-    <ul class="dl-horizontal"> {# dl tag, a list with term and descriptions #}
-        <li><a href="{{ url('author_index') }}">{{'author_list'|trans}}</a></li>
-        <li><a href="{{ url('category_index') }}">{{'category_list'|trans}}</a></li>
-        <li><a href="{{ url('tag_index') }}">{{ 'tag_list'|trans }}</a></li>
-    </ul>
+        {% if is_granted('ROLE_ADMIN') %}
+            <a href="{{ url('book_create') }}">{{'title_book_create'|trans}}</a><br><br>
+
+            <ul class="dl-horizontal"> {# dl tag, a list with term and descriptions #}
+                <li><a href="{{ url('author_index') }}">{{'author_list'|trans}}</a></li>
+                <li><a href="{{ url('category_index') }}">{{'category_list'|trans}}</a></li>
+                <li><a href="{{ url('tag_index') }}">{{ 'tag_list'|trans }}</a></li>
+            </ul>
+        {% endif %}
 
     {% if pagination is defined and pagination.items|length %}
 
@@ -47,8 +59,11 @@
                     </td>
                     <td>
                         <a href="{{ url('book_show', {'id':book.id}) }}">{{ 'action_show'|trans }}</a>
-                        <a href="{{ url('book_edit', {'id':book.id}) }}">{{ 'label_edit'|trans }}</a>
-                        <a href="{{ url('book_delete', {'id':book.id}) }}">{{ 'label_delete'|trans }}</a>
+
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <a href="{{ url('book_edit', {'id':book.id}) }}">{{ 'label_edit'|trans }}</a>
+                            <a href="{{ url('book_delete', {'id':book.id}) }}">{{ 'label_delete'|trans }}</a>
+                        {% endif %}
 
                     </td>
                 </tr>
