--- a/app/templates/category/show.html.twig
+++ b/app/templates/category/show.html.twig
@@ -6,6 +6,16 @@
 {% endblock %}
 
 {% block body %}
+    {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+        <div>{{ app.user.username }}</div>
+        <div>
+            <a href="{{ url('app_logout') }}">{{ 'logout'|trans }}</a>
+        </div>
+    {% else %}
+        <div>
+            <a href="{{ url('app_login') }}">{{ 'log_in'|trans }}</a>
+        </div>
+    {% endif %}
     <h1>{{'title_selected_category'|trans}}</h1>
 
     {% if category is defined and category|length %}
@@ -27,6 +37,8 @@
     {% endif %}
 
     <a href="{{ url('book_index') }}">{{'all_books_list_back'|trans}}</a><br>
+    {% if is_granted('ROLE_ADMIN') %}
     <a href="{{ url('category_index') }}">{{'all_category_list_back'|trans}}</a>
+    {% endif %}
 
 {% endblock %}
