--- a/app/templates/category/show.html.twig
+++ b/app/templates/category/show.html.twig
@@ -6,17 +6,7 @@
 {% endblock %}
 
 {% block body %}
-    {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-        <div>{{ app.user.username }}</div>
-        <div>
-            <a href="{{ url('app_logout') }}">{{ 'logout'|trans }}</a>
-        </div>
-    {% else %}
-        <div>
-            <a href="{{ url('app_login') }}">{{ 'log_in'|trans }}</a>
-        </div>
-    {% endif %}
-    <h1>{{'title_selected_category'|trans}}</h1>
+    <h1>{{'title_selected_category'|trans({'%title%': category.title|default('')})}}</h1>
 
     {% if category is defined and category|length %}
         <dl class="dl-horizontal"> {# dl tag, a list with term and descriptions #}
@@ -28,7 +18,30 @@
             <dd>{{ category.updatedAt|date('d/m/Y') }}</dd>
             <dt>{{ 'label_title'|trans }}</dt>
             <dd>{{ category.title }}</dd>
+            <dt><h4>{{ 'books_in_this_category'|trans }}</h4></dt>
         </dl>
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th>{{ 'label_id'|trans }}</th>
+                <th>{{ 'label_title'|trans }}</th>
+                <th>{{ ' ' }}</th>
+                <th>{{ 'label_author'|trans }}</th>
+                <th>{{ ' ' }}</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for item in book %}
+                    <tr>
+                        <td>{{ item.id }}</td>
+                        <td>{{ item.title }}</td>
+                        <td><a href="{{ url('book_show', {'id':item.id}) }}">{{ 'show_book'|trans }}</a></td>
+                        <td>{{ item.author.title }}</td>
+                        <td><a href="{{ url('author_show', {'id':item.author.id}) }}">{{ 'show_author'|trans }}</a></td>
+                    </tr>
+            {% endfor %}
+            </tbody>
+        </table>
     {% else %}
         {% include 'default/_single_flash_message.html.twig' with {
             type: 'warning',
@@ -37,8 +50,6 @@
     {% endif %}
 
     <a href="{{ url('book_index') }}">{{'all_books_list_back'|trans}}</a><br>
-    {% if is_granted('ROLE_ADMIN') %}
     <a href="{{ url('category_index') }}">{{'all_category_list_back'|trans}}</a>
-    {% endif %}
 
 {% endblock %}
