--- a/app/templates/author/index.html.twig
+++ b/app/templates/author/index.html.twig
@@ -6,8 +6,9 @@
 
 {% block body %}
     <h1>{{ 'author_list' | trans }}</h1>
-    <a href="{{ url('author_create') }}">{{'title_author_create'|trans}}</a><br><br>
-
+    {% if is_granted('ROLE_ADMIN') %}
+        <a href="{{ url('author_create') }}">{{'title_author_create'|trans}}</a><br><br>
+    {% endif %}
     {% if pagination is defined and pagination.items|length %} {#tasks to mapowanie z funkcji w contollerze#}
 
         <div class="navigation text-center">
@@ -31,9 +32,11 @@
                     <td>
 
                         <a href="{{ url('author_show', {'id':author.id}) }}">{{ 'action_show'|trans }}</a>
-                        <a href="{{ url('author_edit', {'id':author.id}) }}">{{ 'label_edit'|trans }}</a>
-                        {% if not author.books|length %}
-                            <a href="{{ url('author_delete', {'id':author.id}) }}">{{ 'label_delete'|trans }}</a>
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <a href="{{ url('author_edit', {'id':author.id}) }}">{{ 'label_edit'|trans }}</a>
+                            {% if not author.books|length %}
+                                <a href="{{ url('author_delete', {'id':author.id}) }}">{{ 'label_delete'|trans }}</a>
+                            {% endif %}
                         {% endif %}
                     </td>
                 </tr>
