--- a/app/templates/book/index.html.twig
+++ b/app/templates/book/index.html.twig
@@ -17,7 +17,6 @@
                 <li><a href="{{ url('tag_index') }}">{{ 'tag_list'|trans }}</a></li>
             </ul>
 
-
     {% if pagination is defined and pagination.items|length %}
 
         <div class="navigation text-center">
@@ -50,7 +49,9 @@
                     </td>
                     <td>
                         <a href="{{ url('book_show', {'id':book.id}) }}">{{ 'action_show'|trans }}</a>
-
+                        {% if is_granted('ROLE_USER') %}
+                            <a href="{{ url('favourite_add', {'id':book.id}) }}">{{ 'add_to_favourites'|trans }}</a>
+                        {% endif %}
                         {% if is_granted('ROLE_ADMIN') %}
                             <a href="{{ url('book_edit', {'id':book.id}) }}">{{ 'label_edit'|trans }}</a>
                             <a href="{{ url('book_delete', {'id':book.id}) }}">{{ 'label_delete'|trans }}</a>
