--- a/app/templates/book/index.html.twig
+++ b/app/templates/book/index.html.twig
@@ -12,6 +12,7 @@
             <a href="{{ url('book_create') }}">{{'title_book_create'|trans}}</a><br><br>
         {% endif %}
             <ul class="dl-horizontal"> {# dl tag, a list with term and descriptions #}
+                <li><a href="{{ url('user_favourite_index') }}">{{'favourite_list'|trans}}</a></li>
                 <li><a href="{{ url('author_index') }}">{{'author_list'|trans}}</a></li>
                 <li><a href="{{ url('category_index') }}">{{'category_list'|trans}}</a></li>
                 <li><a href="{{ url('tag_index') }}">{{ 'tag_list'|trans }}</a></li>
@@ -72,4 +73,5 @@
             message: 'empty_book_list'|trans
         } %}
     {% endif %}
+
 {% endblock %}
