--- a/app/templates/book/show.html.twig
+++ b/app/templates/book/show.html.twig
@@ -34,11 +34,19 @@
         </dl>
         <div class="comments">
             <h3>{{ 'title_comments'|trans }}</h3>
-            <div style="margin-bottom: 1%">
-                <a href="#">
-                    {{ 'add_comment'|trans }}
-                </a>
-             </div>
+
+            {% if is_granted('ROLE_USER') %}
+                <div class="container">
+                    <h5>{{ 'title_comment_new'|trans }}</h5>
+                    {{ form_start(form, { method: 'POST', action: url('new_comment', {id: book.getId()}) }) }}
+                    {{ form_widget(form) }}
+                    <div class="form-group row float-sm-right">
+                        <input type="submit" value="{{ 'action_save'|trans }}" class="btn btn-primary" />
+                    </div>
+                    {{ form_end(form) }}
+                </div>
+            {% endif %}
+
                 {% if book.getComment()|length %}
                     {% for comment in book.getComment() %}
                         <div style="border-style: groove">
