user index, user show, security voters

--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -10,13 +10,15 @@
     </head>
     <body>
     {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-        <div>{{ app.user.username }}</div>
+        <div>{{ 'logged_as'|trans }}{{ app.user.userData.nickname }}</div>
+        <a href="{{ url('user_show', {'id':app.user.id}) }}">{{ 'your_account'|trans }}</a>
         <div>
             <a href="{{ url('app_logout') }}">{{ 'logout'|trans }}</a>
         </div>
     {% else %}
         <div>
-            <a href="{{ url('app_login') }}">{{ 'log_in'|trans }}</a>
+            <a href="{{ url('app_login') }}">{{ 'log_in'|trans }}</a><br>
+            <a href="{#{{ url('app_register') }}#}">{{ 'register'|trans }}</a>
         </div>
     {% endif %}
         <div class="container-fluid">
