--- a/app/templates/book/index.html.twig
+++ b/app/templates/book/index.html.twig
@@ -19,6 +19,7 @@
                 <li><a href="{{ url('author_index') }}">{{'author_list'|trans}}</a></li>
                 <li><a href="{{ url('category_index') }}">{{'category_list'|trans}}</a></li>
                 <li><a href="{{ url('tag_index') }}">{{ 'tag_list'|trans }}</a></li>
+                <li><a href="{{ url('user_index') }}">{{ 'user_list'|trans }}</a></li>
                 {% endif %}
             </ul>
 
