change user data

--- a/app/templates/user/change_data.html.twig
+++ b/app/templates/user/change_data.html.twig
@@ -1,9 +1,8 @@
 {% include 'default/_form.html.twig' with {
     page_title: 'title_user_data_change',
-    page_title_param: {'%nickname%': user.nickname},
     attr: {
         method: 'PUT',
-        action: url('user_data_change', {'id': user.id}),
+        action: url('user_data_change', {'id': userData.id}),
     },
     form: form,
     back_to_list_path: 'book_index',
