--- a/app/templates/book/show.html.twig
+++ b/app/templates/book/show.html.twig
@@ -6,6 +6,9 @@
 
 {% block body %}
     <h1>{{ 'title_book_details'|trans({'%title%': book.title|default('')}) }}</h1>
+    {% if is_granted('ROLE_USER') %}
+        <h5><a href="{{ url('favourite_add', {'id':book.id}) }}">{{ 'add_to_favourites'|trans }}</a></h5><br>
+    {% endif %}
     <a href="{{ url('book_index') }}">
         {{ 'all_books_list_back'|trans }}
     </a>
