--- a/app/templates/user/show.html.twig
+++ b/app/templates/user/show.html.twig
@@ -8,7 +8,7 @@
     <h1>{{ 'title_user_view'|trans({'%nickname%': user.userData.nickname|default('')}) }}</h1>
 
     {% if user is defined and user|length %}
-        <a href="{#{{ url('user_change_data') }}#}">{{'change_data'|trans}}</a><br>
+        <a href="{{ url('user_data_change', {'id':app.user.id}) }}">{{'change_data'|trans}}</a><br>
         <a href="{{ url('user_change_password', {'id':app.user.id}) }}">{{'change_password'|trans}}</a>
 
         <dl class="dl-horizontal"> {# dl tag, a list with term and descriptions #}
