--- a/app/templates/security/login.html.twig
+++ b/app/templates/security/login.html.twig
@@ -38,5 +38,8 @@
     <button class="btn btn-lg btn-primary" type="submit">
         {{'log_in'|trans}}
     </button>
+    <a href="{{ url('book_index') }}">
+        {{ 'all_books_list_back'|trans }}
+    </a>
 </form>
 {% endblock %}
