--- a/app/templates/security/login.html.twig
+++ b/app/templates/security/login.html.twig
@@ -37,7 +37,7 @@
 
     <button class="btn btn-lg btn-primary" type="submit">
         {{'log_in'|trans}}
-    </button>
+    </button><br>
     <a href="{{ url('book_index') }}">
         {{ 'all_books_list_back'|trans }}
     </a>
