--- a/app/templates/book/index.html.twig
+++ b/app/templates/book/index.html.twig
@@ -63,7 +63,15 @@
                         {% endif %}
                         {% if is_granted('ROLE_ADMIN') %}
                             <a href="{{ url('book_edit', {'id':book.id}) }}">{{ 'label_edit'|trans }}</a>
-                            <a href="{{ url('book_delete', {'id':book.id}) }}">{{ 'label_delete'|trans }}</a>
+                            {% if not book.favourite|length %} {# nie można usunąć artykułu jeśli ma komentarze lub jeśli jest w czyjejś liście ulubionych #}
+                                {% if not book.comment|length %}
+                                    <a href="{{ url('book_delete', {'id':book.id}) }}">Usuń</a>
+                                {% else %}
+                                    <p>{{ 'message_delete_comments'|trans }}</p>
+                                {% endif %}
+                            {% else %}
+                                <p>{{ 'message_delete_favourites'|trans }}</p>
+                            {% endif %}
                         {% endif %}
 
                     </td>
