--- a/app/templates/user/change_password.html.twig
+++ b/app/templates/user/change_password.html.twig
@@ -5,5 +5,5 @@
         method: 'PUT',
         action: url('user_change_password', {'id': user.id}),
     },
-    back_to_user: 'user_show',
+    back_to_list_path: 'book_index',
 } %}
