--- a/app/templates/user/show.html.twig
+++ b/app/templates/user/show.html.twig
@@ -8,8 +8,18 @@
     <h1>{{ 'title_user_view'|trans({'%nickname%': user.userData.nickname|default('')}) }}</h1>
 
     {% if user is defined and user|length %}
+        {% if not is_granted('ROLE_ADMIN') %}
         <a href="{{ url('user_data_change', {'id':app.user.id}) }}">{{'change_data'|trans}}</a><br>
-        <a href="{{ url('user_change_password', {'id':app.user.id}) }}">{{'change_password'|trans}}</a>
+        {% endif %}
+        {% if is_granted('ROLE_ADMIN') %}
+            <a href="{{ url('user_data_change', {'id': user.id}) }}">{{'change_data'|trans}}</a><br>
+        {% endif %}
+        {% if not is_granted('ROLE_ADMIN') %}
+        <a href="{{ url('user_change_password', {'id':app.user.id}) }}">{{'change_password'|trans}}</a><br>
+        {% endif %}
+        {% if is_granted('ROLE_ADMIN') %}
+            <a href="{{ url('user_change_password', {'id':user.id}) }}">{{'change_password'|trans}}</a><br>
+        {% endif %}
 
         <dl class="dl-horizontal"> {# dl tag, a list with term and descriptions #}
             <dt>{{ 'label_id'|trans }}</dt>
