--- a/app/templates/book/index.html.twig
+++ b/app/templates/book/index.html.twig
@@ -62,7 +62,7 @@
                         {% endif %}
                         {% if is_granted('ROLE_ADMIN') %}
                             <a href="{{ url('book_edit', {'id':book.id}) }}">{{ 'label_edit'|trans }}</a>
-                            <a href="{{ url('book_delete', {'id':book.id}) }}">Usuń</a>
+                            <a href="{{ url('book_delete', {'id':book.id}) }}">{{ 'label_delete'|trans }}</a>
                         {% endif %}
 
                     </td>
