--- a/app/templates/user/favourite.html.twig
+++ b/app/templates/user/favourite.html.twig
@@ -21,7 +21,7 @@
             {% for item in favourite %}
             <tr>
                 <td>{{ item.id }}</td>
-                <td>{{ item.createdAt|date('Y/m/d') }}</td>
+                <td>{{ item.createdAt|format_date('long') }}</td>
                 <td>{{ item.book.title }}</td>
                 <td>{{ item.user.email }}</td>
                 <td><a href="{{ url('favourite_delete', {'id':item.id}) }}">{{ 'label_delete'|trans }}</a></td>
