--- a/app/templates/author/show.html.twig
+++ b/app/templates/author/show.html.twig
@@ -14,9 +14,9 @@
             <dt>{{ 'label_id'|trans }}</dt>
             <dd>{{ author.id }}</dd>
             <dt>{{ 'label_created_at'|trans }}</dt>
-            <dd>{{ author.createdAt|date('d/m/Y') }}</dd>
+            <dd>{{ author.createdAt|format_date('long') }}</dd>
             <dt>{{ 'label_updated_at'|trans }}</dt>
-            <dd>{{ author.updatedAt|date('d/m/Y') }}</dd>
+            <dd>{{ author.updatedAt|format_date('long') }}</dd>
             <dt>{{ 'label_name_surname'|trans }}</dt>
             <dd>{{ author.title }}</dd>
             <dt>{{ 'label_description'|trans }}</dt>
