--- a/app/templates/book/show.html.twig
+++ b/app/templates/book/show.html.twig
@@ -17,9 +17,9 @@
             <dt>{{ 'label_id'|trans }}</dt>
             <dd>{{ book.id }}</dd>
             <dt>{{ 'label_created_at'|trans }}</dt>
-            <dd>{{ book.createdAt|date('Y/m/d') }}</dd>
+            <dd>{{ book.createdAt|format_date('long') }}</dd>
             <dt>{{ 'label_updated_at'|trans }}</dt>
-            <dd>{{ book.updatedAt|date('Y/m/d') }}</dd>
+            <dd>{{ book.updatedAt|format_date('long') }}</dd>
             <dt>{{ 'label_category'|trans }}</dt>
             <dd>{{ book.category.title }}</dd>
             <dt>{{ 'label_tag'|trans }}</dt>
