--- a/app/templates/category/show.html.twig
+++ b/app/templates/category/show.html.twig
@@ -13,9 +13,9 @@
             <dt>{{ 'label_id'|trans }}</dt>
             <dd>{{ category.id }}</dd>
             <dt>{{ 'label_created_at'|trans }}</dt>
-            <dd>{{ category.createdAt|date('d/m/Y') }}</dd>
+            <dd>{{ category.createdAt|format_date('long') }}</dd>
             <dt>{{ 'label_updated_at'|trans }}</dt>
-            <dd>{{ category.updatedAt|date('d/m/Y') }}</dd>
+            <dd>{{ category.updatedAt|format_date('long') }}</dd>
             <dt>{{ 'label_title'|trans }}</dt>
             <dd>{{ category.title }}</dd>
         </dl>
